# JSONSki_python

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
JSONSki.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conda.recipe/: meta.yaml
dataset/: twitter_sample_large_record.json
sources/: record_loaders.cpp
src/: RecordLoader.h
tests/: test_loadRecords.py  test_loadSingleRecord.py
